[package]
name = "multi-process-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { path = "../../crates/wasmtime", version = "0.39.0", default-features = true, features = ['cache', 'cranelift'] }
anyhow = "1.0.58"
